# persil

./: README.md  pyproject.toml
persil/: __init__.py  annotate.py  retain.py  state.py
tests/: common.py  test_retain.py
